@@ -2,4 +2,4 @@
 <script type="text/javascript" charset="utf-8">
 	passValue("from external document");
 </script>
-<a href="_ajax_content.html" title="Modalbox 1" onclick="Modalbox.show(this.title, this.href, {width: 500, height: 300, beforeLoad: function() {return false} }); return false;">Show ModalBox</a>
+<a href="_ajax_form.html" title="Modalbox 1" onclick="Modalbox.show(this.href, {beforeLoad: function() {return false} }); return false;">Show ModalBox</a>
